[tool.poetry]
name = "ehc"
version = "0.1.0"
description = "This is a cost calculator for charging electric vehicles at home."
authors = ["Heshie Brody <4hbrody@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
